[metadata]
name = phys2cvr
url = https://github.com/smoia/phys2cvr
download_url = https://github.com/smoia/phys2cvr
author = Stefano Moia
maintainer = Stefano Moia
maintainer_email = s.moia@bcbl.eu
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = Apache-2.0
description = Python library to generate regressors for and compute Cerebrovascular Reactivity and lag maps.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    phys2cvr

[options]
python_requires = >=3.6.1
install_requires =
    numpy >=1.9.3
    matplotlib >=3.1.1
    nibabel
    scipy
    peakdet
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
    myst-parser
style =
    flake8 >=4.0
    black
    isort <6.0.0
    pydocstyle
    codespell
test =
    %(style)s
    pytest-cov
    coverage
devtools =
    pre-commit
dev =
    %(devtools)s
    %(doc)s
    %(test)s

[options.entry_points]
console_scripts =
    phys2cvr=phys2cvr.phys2cvr:_main

[flake8]
doctest = True
exclude=
    *build/
    tests
    _version.py
    ./nigsp/cli/__init__.py
    ./nigsp/tests/*
    versioneer.py
ignore = E126, E402, W503, F401, F811
max-line-length = 88
extend-ignore = E203, E501
extend-select = B950
per-file-ignores =
    */__init__.py:F401

[isort]
profile = black
skip_gitignore = true
extend_skip =
    .autorc
    .coverage*
    .readthedocs.yml
    .zenodo.json
    codecov.yml
    setup.py
    versioneer.py
    nigsp/_version.py
skip_glob =
    docs/*

[pydocstyle]
convention = numpy
match =
    nigsp/*.py
match_dir = nigsp/[^tests]*

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[coverage:run]
branch = True
omit =
    nigsp/tests/*
    docs/*
    setup.py
    versioneer.py
    doi.py
    __init__.py
    */__init__.py
    */*/__init__.py

[versioneer]
VCS = git
style = pep440
versionfile_source = phys2cvr/_version.py
versionfile_build = phys2cvr/_version.py
tag_prefix =
parentdir_prefix =
